--- a/Source/PresentationTheme.Aero.Win8/Themes/AeroWin8/ScrollBar.xaml
+++ b/Source/PresentationTheme.Aero.Win8/Themes/AeroWin8/ScrollBar.xaml
@@ -209,7 +209,7 @@
     </Setter>
   </Style>
 
-  <Style x:Key="{x:Type ScrollBar}" TargetType="{x:Type ScrollBar}">
+  <Style TargetType="{x:Type ScrollBar}">
     <Setter Property="Stylus.IsPressAndHoldEnabled" Value="False"/>
     <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
     <Setter Property="Background" Value="{StaticResource ScrollBar.Static.Background}"/>
