--- a/Source/ThemePreviewer/Samples/DataGridSampleWpf.xaml
+++ b/Source/ThemePreviewer/Samples/DataGridSampleWpf.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:samples="clr-namespace:ThemePreviewer.Samples"
+             xmlns:themePreviewer="clr-namespace:ThemePreviewer"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance {x:Type samples:DataGridSampleWpf}}"
              d:DesignWidth="300"
@@ -12,7 +13,7 @@
     <DataGrid x:Name="dataGrid"
               ItemsSource="{Binding Items}"
               AutoGenerateColumns="False"
-              RowHeaderWidth="25">
+              RowDetailsVisibilityMode="Collapsed">
       <DataGrid.Columns>
         <DataGridCheckBoxColumn Binding="{Binding Enabled}" Width="20"/>
         <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="75"/>
@@ -20,6 +21,11 @@
         <DataGridTextColumn Header="Size" Binding="{Binding Size}" Width="75"/>
         <DataGridTextColumn Header="LastChanged" Binding="{Binding LastChanged}" Width="200"/>
       </DataGrid.Columns>
+      <DataGrid.RowDetailsTemplate>
+        <DataTemplate DataType="{x:Type themePreviewer:Item}">
+          <TextBlock Text="{Binding Name}"/>
+        </DataTemplate>
+      </DataGrid.RowDetailsTemplate>
     </DataGrid>
   </Grid>
 </UserControl>
