--- a/Source/PresentationTheme.AeroLite.Win10/Themes/AeroLiteWin10.NormalColor.xaml
+++ b/Source/PresentationTheme.AeroLite.Win10/Themes/AeroLiteWin10.NormalColor.xaml
@@ -6301,4 +6301,54 @@
       </Trigger>
     </Style.Triggers>
   </Style>
+
+
+  <!-- ToolTip ============================================================= -->
+
+  <SolidColorBrush x:Key="ToolTip.Foreground" Color="#FF575757" po:Freeze="True"/>
+  <SolidColorBrush x:Key="ToolTip.Background" Color="#FFF1F2F7" po:Freeze="True"/>
+  <SolidColorBrush x:Key="ToolTip.Border" Color="#FF767676" po:Freeze="True"/>
+
+  <Style TargetType="{x:Type ToolTip}">
+    <Setter Property="Foreground" Value="{StaticResource ToolTip.Foreground}"/>
+    <Setter Property="Background" Value="{StaticResource ToolTip.Background}"/>
+    <Setter Property="BorderBrush" Value="{StaticResource ToolTip.Border}"/>
+    <Setter Property="BorderThickness" Value="1"/>
+    <Setter Property="Padding" Value="5,1,6,2"/>
+    <Setter Property="FontFamily" Value="{DynamicResource {x:Static SystemFonts.StatusFontFamilyKey}}"/>
+    <Setter Property="FontSize" Value="{DynamicResource {x:Static SystemFonts.StatusFontSizeKey}}"/>
+    <Setter Property="FontStyle" Value="{DynamicResource {x:Static SystemFonts.StatusFontStyleKey}}"/>
+    <Setter Property="FontWeight" Value="{DynamicResource {x:Static SystemFonts.StatusFontWeightKey}}"/>
+    <Setter Property="HorizontalContentAlignment" Value="Left"/>
+    <Setter Property="VerticalContentAlignment" Value="Center"/>
+    <Setter Property="HasDropShadow" Value="{DynamicResource {x:Static SystemParameters.DropShadowKey}}"/>
+    <Setter Property="SnapsToDevicePixels" Value="True"/>
+    <Setter Property="RenderOptions.ClearTypeHint" Value="Enabled"/>
+    <Setter Property="Template">
+      <Setter.Value>
+        <ControlTemplate TargetType="{x:Type ToolTip}">
+          <aero10:SystemDropShadowChrome x:Name="Shdw"
+                                         Color="Transparent"
+                                         SnapsToDevicePixels="True">
+            <Border x:Name="Border"
+                    Background="{TemplateBinding Background}"
+                    BorderBrush="{TemplateBinding BorderBrush}"
+                    BorderThickness="{TemplateBinding BorderThickness}"
+                    SnapsToDevicePixels="True">
+              <ContentPresenter Margin="{TemplateBinding Padding}"
+                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+            </Border>
+          </aero10:SystemDropShadowChrome>
+          <ControlTemplate.Triggers>
+            <Trigger Property="HasDropShadow" Value="True">
+              <Setter TargetName="Shdw" Property="Margin" Value="0,0,5,5"/>
+              <Setter TargetName="Shdw" Property="Color" Value="#71000000"/>
+            </Trigger>
+          </ControlTemplate.Triggers>
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
+  </Style>
 </ResourceDictionary>
