--- a/Source/PresentationTheme.Aero.Win10/Themes/AeroWin10.NormalColor.xaml
+++ b/Source/PresentationTheme.Aero.Win10/Themes/AeroWin10.NormalColor.xaml
@@ -440,9 +440,9 @@
 
   <Style x:Key="BaseButtonStyle" TargetType="{x:Type ButtonBase}">
     <Setter Property="FocusVisualStyle" Value="{StaticResource Button.FocusVisual}"/>
+    <Setter Property="Foreground" Value="Black"/>
     <Setter Property="Background" Value="{StaticResource Button.Background.Normal}"/>
     <Setter Property="BorderBrush" Value="{StaticResource Button.Border.Normal}"/>
-    <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
     <Setter Property="BorderThickness" Value="1"/>
     <Setter Property="HorizontalContentAlignment" Value="Center"/>
     <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -479,9 +479,9 @@
 
   <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
     <Setter Property="FocusVisualStyle" Value="{StaticResource Button.FocusVisual}"/>
+    <Setter Property="Foreground" Value="Black"/>
     <Setter Property="Background" Value="{StaticResource Button.Background.Normal}"/>
     <Setter Property="BorderBrush" Value="{StaticResource Button.Border.Normal}"/>
-    <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
     <Setter Property="BorderThickness" Value="1"/>
     <Setter Property="HorizontalContentAlignment" Value="Center"/>
     <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -901,7 +901,7 @@
 
   <Style x:Key="ComboBox.ReadOnly.Button" TargetType="{x:Type ToggleButton}">
     <Setter Property="OverridesDefaultStyle" Value="True"/>
-    <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+    <Setter Property="Foreground" Value="Black"/>
     <Setter Property="Background" Value="{StaticResource ComboBox.Button.Background.Normal}"/>
     <Setter Property="BorderBrush" Value="{StaticResource ComboBox.Button.Border.Normal}"/>
     <Setter Property="BorderThickness" Value="1"/>
@@ -1357,9 +1357,9 @@
 
   <Style TargetType="{x:Type ComboBox}">
     <Setter Property="FocusVisualStyle" Value="{StaticResource ComboBox.ReadOnly.FocusVisual}"/>
+    <Setter Property="Foreground" Value="Black"/>
     <Setter Property="Background" Value="{StaticResource ComboBox.Button.Background.Normal}"/>
     <Setter Property="BorderBrush" Value="{StaticResource ComboBox.Button.Border.Normal}"/>
-    <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
     <Setter Property="BorderThickness" Value="1"/>
     <Setter Property="Padding" Value="3,2,2,2"/>
     <Setter Property="HorizontalContentAlignment" Value="Left"/>
@@ -4291,7 +4291,7 @@
 
   <Style TargetType="{x:Type TabItem}">
     <Setter Property="FocusVisualStyle" Value="{StaticResource TabItem.FocusVisual}"/>
-    <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+    <Setter Property="Foreground" Value="Black"/>
     <Setter Property="Background" Value="{StaticResource TabItem.Background.Normal}"/>
     <Setter Property="BorderBrush" Value="{StaticResource TabItem.Border.Normal}"/>
     <Setter Property="Margin" Value="0"/>
