--- a/Source/PresentationTheme.HighContrast.Win10/Themes/HighContrast.Win10.NormalColor.xaml
+++ b/Source/PresentationTheme.HighContrast.Win10/Themes/HighContrast.Win10.NormalColor.xaml
@@ -6,6 +6,7 @@
   xmlns:aero="clr-namespace:PresentationTheme.Aero;assembly=PresentationTheme.Aero"
   xmlns:aero10="clr-namespace:PresentationTheme.HighContrast.Win10">
 
+  <aero:TreeViewItemLevelConverter x:Key="TreeViewItemLevelConverter"/>
   <aero10:TypeOfConverter x:Key="TypeOfConverter"/>
   <aero10:InvertThicknessConverter x:Key="InvertThicknessConverter"/>
   <aero10:EqualsConverter x:Key="EqualsConverter"/>
@@ -3046,7 +3047,7 @@
             <ColumnDefinition Width="1e300">
               <ColumnDefinition.MaxWidth>
                 <Binding RelativeSource="{RelativeSource TemplatedParent}"
-                         Converter="{x:Static aero:TreeViewItemLevelConverter.Instance}">
+                         Converter="{StaticResource TreeViewItemLevelConverter}">
                   <Binding.ConverterParameter>
                     <system:Int32>19</system:Int32>
                   </Binding.ConverterParameter>
@@ -3261,7 +3262,7 @@
             <ColumnDefinition Width="1e300">
               <ColumnDefinition.MaxWidth>
                 <Binding RelativeSource="{RelativeSource TemplatedParent}"
-                         Converter="{x:Static aero:TreeViewItemLevelConverter.Instance}">
+                         Converter="{StaticResource TreeViewItemLevelConverter}">
                   <Binding.ConverterParameter>
                     <system:Int32>19</system:Int32>
                   </Binding.ConverterParameter>
@@ -3936,7 +3937,12 @@
         <ControlTemplate TargetType="{x:Type ProgressBar}">
           <aero10:ProgressBarChrome
             Style="{StaticResource {x:Type aero10:ProgressBarChrome}}"
-            Bar="{Binding RelativeSource={RelativeSource TemplatedParent}}"
+            Value="{TemplateBinding Value}"
+            Minimum="{TemplateBinding Minimum}"
+            Maximum="{TemplateBinding Maximum}"
+            Orientation="{TemplateBinding Orientation}"
+            IsIndeterminate="{TemplateBinding IsIndeterminate}"
+            Foreground="{TemplateBinding Foreground}"
             Background="{TemplateBinding Background}"
             BorderBrush="{TemplateBinding BorderBrush}"
             BorderThickness="{TemplateBinding BorderThickness}"/>
