Aero: Bind tickbar's selection tick brush

--- a/Source/PresentationTheme.AeroLite.Win10/Themes/AeroLite.Win10.NormalColor.xaml
+++ b/Source/PresentationTheme.AeroLite.Win10/Themes/AeroLite.Win10.NormalColor.xaml
@@ -4188,14 +4188,16 @@
                           Placement="Top"
                           Visibility="Collapsed"
                           Margin="0,5,0,0"
-                          Fill="{TemplateBinding Foreground}"/>
+                          Fill="{TemplateBinding Foreground}"
+                          SelectionTickBrush="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
         <aero10:TickBarEx x:Name="BottomTick"
                           Grid.Row="2"
                           Height="4"
                           Placement="Bottom"
                           Visibility="Collapsed"
                           Margin="0,0,0,5"
-                          Fill="{TemplateBinding Foreground}"/>
+                          Fill="{TemplateBinding Foreground}"
+                          SelectionTickBrush="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
         <Border x:Name="TrackBackground"
                 Grid.Row="1"
                 BorderThickness="1"
