--- a/Source/PresentationTheme.HighContrast.Win10/Themes/HighContrast.Win10.NormalColor.xaml
+++ b/Source/PresentationTheme.HighContrast.Win10/Themes/HighContrast.Win10.NormalColor.xaml
@@ -4076,14 +4076,16 @@
                           Placement="Top"
                           Visibility="Collapsed"
                           Margin="0,5,0,0"
-                          Fill="{TemplateBinding Foreground}"/>
+                          Fill="{TemplateBinding Foreground}"
+                          SelectionTickBrush="{TemplateBinding Foreground}"/>
         <aero10:TickBarEx x:Name="BottomTick"
                           Grid.Row="2"
                           Height="4"
                           Placement="Bottom"
                           Visibility="Collapsed"
                           Margin="0,0,0,5"
-                          Fill="{TemplateBinding Foreground}"/>
+                          Fill="{TemplateBinding Foreground}"
+                          SelectionTickBrush="{TemplateBinding Foreground}"/>
         <Border x:Name="TrackBackground"
                 Grid.Row="1"
                 BorderThickness="1"
