--- a/Source/ThemePreviewer/Samples/MenuSampleWpf.xaml
+++ b/Source/ThemePreviewer/Samples/MenuSampleWpf.xaml
@@ -22,69 +22,11 @@
       </DrawingImage.Drawing>
     </DrawingImage>
   </UserControl.Resources>
+  <UserControl.ContextMenu>
+    <ContextMenu x:Name="contextMenu"/>
+  </UserControl.ContextMenu>
   <DockPanel Background="Transparent">
-    <DockPanel.ContextMenu>
-      <ContextMenu x:Name="contextMenu1">
-        <MenuItem Header="Normal" InputGestureText="Ctrl+N">
-          <MenuItem.Icon>
-            <Image Source="{StaticResource icon1}" SnapsToDevicePixels="True"/>
-          </MenuItem.Icon>
-        </MenuItem>
-        <MenuItem Header="Header" InputGestureText="Ctrl+H">
-          <MenuItem.Icon>
-            <Border BorderBrush="#FF0000FF" BorderThickness="1"
-                    Background="#FFCCCCFF" Width="16" Height="16"
-                    SnapsToDevicePixels="True"/>
-          </MenuItem.Icon>
-          <MenuItem Header="Normal"/>
-          <MenuItem Header="Header">
-            <MenuItem Header="_Normal"/>
-            <MenuItem Header="_Header"/>
-            <MenuItem Header="_Checked" IsChecked="True" IsCheckable="True"/>
-          </MenuItem>
-          <MenuItem Header="_Checked" IsChecked="True" IsCheckable="True"/>
-          <Separator/>
-          <MenuItem Header="_Disabled" IsEnabled="False"/>
-        </MenuItem>
-        <MenuItem Header="_Checked" IsChecked="True" IsCheckable="True"/>
-        <Separator/>
-        <MenuItem Header="_Disabled" IsEnabled="False"/>
-      </ContextMenu>
-    </DockPanel.ContextMenu>
-    <Menu DockPanel.Dock="Top" x:Name="menu">
-      <MenuItem Header="_Normal"/>
-      <MenuItem Header="_Header">
-        <MenuItem Header="_Normal" InputGestureText="Ctrl+N">
-          <MenuItem.Icon>
-            <Image Source="{StaticResource icon1}" SnapsToDevicePixels="True"/>
-          </MenuItem.Icon>
-        </MenuItem>
-        <MenuItem Header="_Header" InputGestureText="Ctrl+H">
-          <MenuItem.Icon>
-            <Border BorderBrush="#FF0000FF" BorderThickness="1"
-                    Background="#FFCCCCFF" Width="16" Height="16"
-                    SnapsToDevicePixels="True"/>
-          </MenuItem.Icon>
-          <MenuItem Header="_Normal"/>
-          <MenuItem Header="Header">
-            <MenuItem Header="_Normal"/>
-            <MenuItem Header="_Header"/>
-            <MenuItem Header="_Checked" IsChecked="True" IsCheckable="True"/>
-          </MenuItem>
-          <MenuItem Header="_Checked" IsChecked="True" IsCheckable="True"/>
-          <Separator/>
-          <MenuItem Header="_Disabled" IsEnabled="False"/>
-        </MenuItem>
-        <MenuItem Header="_Checked" IsChecked="True" IsCheckable="True"/>
-        <MenuItem Header="_Disabled" IsEnabled="False"/>
-        <Separator/>
-        <MenuItem Header="_Disabled" IsEnabled="False">
-          <MenuItem Header="_Normal"/>
-        </MenuItem>
-      </MenuItem>
-      <MenuItem Header="_Checked" IsChecked="True" IsCheckable="True"/>
-      <MenuItem Header="_Disabled" IsEnabled="False"/>
-    </Menu>
+    <Menu DockPanel.Dock="Top" x:Name="menu"/>
     <Menu DockPanel.Dock="Top" IsEnabled="False" Margin="0,10,0,0">
       <MenuItem Header="_Normal"/>
       <MenuItem Header="_Header">
